Adding SSL and keystore request and passwords for stating jetty server with Https

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=5000
+server.ssl.key-store = classpath:schedule.jks
+server.ssl.key-store-password=Technikons1!
+server.ssl.key-password=Technikons1!
